tests/ui/lifetimes/mismatched-lifetime-syntaxes-details/example-from-issue48686.stderr
error: eliding a lifetime that's named elsewhere is confusing
  --> $DIR/example-from-issue48686.rs:6:50
   |
LL |     pub fn get_mut(&'static self, x: &mut u8) -> &mut u8 {
   |                     -------                      ^^^^^^^ the same lifetime is elided here
   |                     |
   |                     the lifetime is named here
   |
   = help: the same lifetime is referred to in inconsistent ways, making the signature confusing
note: the lint level is defined here
  --> $DIR/example-from-issue48686.rs:1:9
   |
LL | #![deny(mismatched_lifetime_syntaxes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consistently use `'static`
   |
LL |     pub fn get_mut(&'static self, x: &mut u8) -> &'static mut u8 {
   |                                                   +++++++

error: aborting due to 1 previous error

